# auto_ros2

./: .dockerignore  .gitignore  .gitmodules  .ros_path  CONTRIBUTING.md  Cargo.toml  JUSTFILE  README.md  SOURCE_SCRIPT.bash  SOURCE_SCRIPT.fish  pixi.toml  pyproject.toml
lib/soro_gps/: Cargo.toml  README.md
lib/soro_gps/src/: error.rs  lib.rs
src/aruco/: README.md  package.xml  pyproject.toml  setup.py
src/aruco/aruco_node/: aruco_dict_map.py  find_aruco_action_server.py  image_capture.py  main.py  types.py  utils.py
src/aruco/extra_scripts/: camera_calibration.py
src/aruco/launch/: test.launch.py
src/aruco/params/: see3cam_opencv_camera_config.yaml
src/aruco/test/: test_calc_object_pose.py
src/aruco_node/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/aruco_node/aruco_node/: aruco_dict_map.py  image_capture.py  main.py  test_node.py  utils.py
src/aruco_node/extra_scripts/: aruco_marker_maker.py  camera_calibration.py
src/aruco_node/launch/: test.launch.py
src/aruco_node/tests/: test_calc_object_pose.py
src/autonomous_node/: CMakeLists.txt  Cargo.toml  log4rs.yaml  package.xml
src/autonomous_node/src/: main.rs
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: FindArucoWithPose.action
src/custom_interfaces/bindings/builtin_interfaces/: Cargo.toml  cksum
src/custom_interfaces/bindings/builtin_interfaces/src/: msg.rs
src/custom_interfaces/bindings/custom_interfaces/: Cargo.toml  build.rs  cksum
src/custom_interfaces/bindings/custom_interfaces/src/action/: track_aruco_marker.rs
src/custom_interfaces/bindings/custom_interfaces/src/msg/: gnss_to_map_request.rs  gnss_to_map_response.rs  gps_message.rs  lights_request.rs  lights_response.rs  mono_camera_message.rs
src/custom_interfaces/bindings/custom_interfaces/src/srv/: gnss_to_map.rs
src/custom_interfaces/bindings/geographic_msgs/: Cargo.toml  build.rs
src/custom_interfaces/bindings/geographic_msgs/src/: lib.rs  srv.rs
src/custom_interfaces/bindings/geographic_msgs/src/msg/: bounding_box.rs  (+11 more)
src/custom_interfaces/bindings/geometry_msgs/: Cargo.toml
src/custom_interfaces/bindings/geometry_msgs/src/: msg.rs
src/custom_interfaces/bindings/std_msgs/: Cargo.toml  cksum
src/custom_interfaces/bindings/std_msgs/src/: msg.rs
src/custom_interfaces/bindings/unique_identifier_msgs/: build.rs  cksum
src/custom_interfaces/bindings/unique_identifier_msgs/src/: msg.rs
src/custom_interfaces/msg/: BatteryMessage.msg  WheelsMessage.msg
src/custom_interfaces/srv/: GnssToMap.srv  Lights.srv
src/custom_interfaces_shim/: Cargo.toml  README.md  build.rs  package.xml
src/drive_launcher/: CMakeLists.txt  README.md  package.xml
src/drive_launcher/launch/: drive.launch.py  ebox.launch.py  rover.launch.py  rover.zed.launch.py
src/drive_launcher/launch/hardware/: see3cam.launch.py  zed.launch.py
src/drive_launcher/launch/helpers/: depthimage_to_laserscan.launch.py  nav2.launch.py  navigation_stack.launch.py  robot_localization.launch.py  robot_state_publisher.launch.py  ros2_control.launch.py  slam_toolbox.launch.py  start_depth_cam_laser_mapping.py  start_nav2.py  start_ros2_control.py
src/drive_launcher/params/: depthimage_to_laserscan.yaml  ekf.yaml  global_odom.yaml  local_odom.yaml  nav2.yaml  slam_toolbox.yaml
src/drive_launcher/params/robot_localization/: ekf_filter_node_map.yaml  ekf_filter_node_odom.yaml  navsat_transform.yaml
src/drive_launcher/params/ros2_control/: controllers.yaml
src/drive_tui/: Cargo.toml  package.xml
src/drive_tui/src/: main.rs
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: TrackArucoMarker.action
src/interfaces/msg/: GpsMessage.msg
src/lights/: Cargo.toml  README.md  package.xml
src/lights/src/: logic.rs  main.rs  tests.rs
src/lights_node/: CMakeLists.txt  Cargo.toml  package.xml
src/lights_node/src/: logic.rs  main.rs  tests.rs
src/log_node/: README.md  package.xml  pyproject.toml  setup.py
src/log_node/launch/: log.yaml
src/log_node/log_node/: main.py
src/manual_control/: README.md  package.xml  pyproject.toml  setup.py
src/manual_control/launch/: manual_control.launch.py
src/manual_control/manual_control_gui_node/: main.py
src/maps_backend/: Cargo.toml  package.xml
src/maps_backend/src/: main.rs
src/navigator/: README.md  package.xml  pyproject.toml  setup.py
src/navigator/navigation_bringup_node/: main.py
src/navigator/navigator_node/: convert.py  coords.py  main.py  pose.py  types.py
src/navigator/test/: test_angle_to_target.py  test_compass_degrees_z.py
src/navigator/utm_conversion_node/: main.py
src/navigator_node/: package.xml  pyproject.toml  setup.cfg  setup.py
src/navigator_node/navigator_node/: coords.py  main.py  search.py  types.py
src/navigator_node/test/: test_angle_to_target.py
src/see3cam/: CMakeLists.txt  package.xml
src/see3cam/launch/: see3cam.launch.py
src/see3cam/params/: camera_info.yaml  v4l2_camera.yaml
src/sensors/: Cargo.toml  package.xml
src/sensors/src/: logic.rs  main.rs  zed_imu.rs
src/sensors_node/: Cargo.toml  package.xml
src/sensors_node/msg/: GpsMessage.msg  ImuMessage.msg
src/sensors_node/src/: logic.rs  main.rs  msg.rs
src/simulator/: CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.py
src/simulator/launch/: gazebo_only.launch.py  setup.py  sim.launch.py  sim.launch.xml
src/simulator/params/: bridge.yaml  camera.yaml  nav2.yaml
src/simulator/resource/: rover.urdf.xacro.xml  world.sdf.xml
src/simulator/resource/parts/: ros2_control.xacro.xml
src/simulator/scripts/: save_image  simulator
src/simulator/simulator/: main.py  save_image.py  wheel_speeds.py
src/simulator/test/: test_launch_sim_works.py
src/soro_simulator_driver/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/soro_simulator_driver/driver/: main.py
src/soro_simulator_driver/launch/: launch_sim.py
src/soro_simulator_driver/resource/: remi.urdf
src/soro_simulator_driver/worlds/: base_world.wbt
src/wheels/: Cargo.toml  package.xml
src/wheels/src/: logic.rs  main.rs
(+162 files in other folders)
