[workspace]
resolver = "2"
members = [
    # ros 2 packages
    "src/lights",
    "src/wheels",
    "src/sensors",
    "src/drive_tui",
    "src/custom_interfaces_shim",
    "src/maps_backend",
    #
    # libraries (not ros 2 packages)
    "lib/feedback",
    "lib/soro_gps",
    "lib/safe_drive_msg"
]
