[project]
dependencies = [
    "loguru>=0.7.3",
    "opencv-contrib-python>=4.11.0.86",
    "scipy>=1.15.2",
    "geopy>=2.4.1",
    "pyside2>=5.15.2.1; platform_machine != 'arm64' and platform_machine != 'aarch64'",
    "typer>=0.15.2",
    "pyproj>=3.7.1",
    "pygame>=2.6.1",
]

name = "autonomous"
version = "0.2.0"
requires-python = ">=3.10"
# if one python project depends on another, put it here!
[tool.uv.sources]

[tool.uv.workspace]
members = [
    "src/navigator_node",
    "src/log_node",
    "src/aruco_node",
    "src/simulator",
    "src/manual_control",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "colcon-cargo>=0.1.3",
    "colcon-common-extensions>=0.3.0",
    "colcon-ros-cargo>=0.2.0",
    "ruff>=0.9.4",
    "empy==3.3.4",
    "lark==1.2.2",
    "numpy>=1.26.4",
    "cst-lsp>=0.1.3",
    "basedpyright>=1.27.1",
    "rust-just>=1.39.0",
    "setuptools==58.2.0",
]

[tool.basedpyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
exclude = [
    "install/",
    "build/",
    "src/**/install/",
    "src/**/build/",
    "**/__pycache__",
    "**/.*",
]
