[project]
dependencies = [
    "pyside2>=5.15.2.1; platform_machine != 'arm64' and platform_machine != 'aarch64'",
]

name = "autonomous"
version = "0.2.0"
requires-python = ">=3.10"
# if one python project depends on another, put it here!
[tool.uv.sources]

[tool.uv.workspace]
members = [
    "src/navigator_node",
    "src/log_node",
    "src/aruco_node",
    "src/simulator",
    "src/manual_control",
    "lib/rovereye/training",
]

[tool.basedpyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
exclude = [
    "install/",
    "build/",
    "src/**/install/",
    "src/**/build/",
    "**/__pycache__",
    "**/.*",
]

[tool.pixi.workspace]

[tool.pixi.pypi-dependencies]
autonomous = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
