[project]
name = "aruco"
version = "0.1.0"
description = "Handles tracking ArUco tags."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["maintainers", "license", "scripts"]
dependencies = [
    "numpy==1.26.4",
    "opencv-contrib-python>=4.11.0.86",
    "scipy>=1.15.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["colcon-common-extensions>=0.3.0", "ruff>=0.8.4", "typer>=0.15.2"]
