<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_node</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="logan.m.murphy-11@ou.edu">Logan Murphy</maintainer>
  <maintainer email="contact@barretts.club">Barrett Ray</maintainer>
  <maintainer email="tyler73750@gmail.com">Tyler Roman</maintainer>

  <license>TODO</license>
  <<exec_depend>rclpy</exec_depend>
  <<exec_depend>sensor_msgs</exec_depend>
  <<exec_depend>cv_bridge</exec_depend>
  <<exec_depend>vision_opencv</exec_depend>
  <<exec_depend>opencv-python</exec_depend>

  <!-- note: these are optional and only for testing -->
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
