[project]
name = "aruco_node"
version = "0.1.0"
description = "Handles tracking aruco tags."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["maintainers", "license", "scripts"]
dependencies = []

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["colcon-common-extensions>=0.3.0", "ruff>=0.8.4"]
