[package]
name = "autonomous_node"
version = "0.1.0"
edition = "2021"

[dependencies]
log4rs = "1.3.0"
ros2-client = "0.7.6"
tokio = { version = "1.42.0", features = [
    "macros",
    "rt",
    "tokio-macros",
    "tracing",
    "rt-multi-thread",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
