<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>custom_interfaces_shim</name>
    <version>0.1.0</version>
    <description
    >Causes `cargo` to build `custom_interfaces` bindings first in this workspace's `rustc` dependency graph.</description>
    <maintainer email="contact@barretts.club">Barrett Ray</maintainer>
    <license>MIT</license>

    <build_depend>custom_interfaces</build_depend>

    <export>
        <build_type>ament_cargo</build_type>
    </export>
</package>
