<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package>
    <name>drive_launcher</name>
    <version>0.0.0</version>
    <description>Starts up the Rover.</description>
    <maintainer email="contact@barretts.club">Barrett Ray</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
