<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>drive_tui</name>
    <version>0.1.0</version>
    <description>Helps us keep watch of the Rover.</description>

    <maintainer email="contact@barretts.club">Barrett Ray</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cargo</buildtool_depend>

    <export>
        <build_type>ament_cargo</build_type>
    </export>
</package>
