[package]
name = "lights"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lights_node"
path = "src/main.rs"

[dependencies]
feedback = { git = "https://github.com/onkoe/feedback", version = "0.3.0", default-features = false }
futures-lite = "2.6.0"
log4rs = "1.3.0"
ros2-client = { version = "0.8.0" }
serde = "1.0.217"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt",
    "tokio-macros",
    "tracing",
    "rt-multi-thread",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
futures = { version = "0.3.31", default-features = false, features = [
    "alloc",
    "std",
    "async-await",
] }
