[package]
name = "lights"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lights_node"
path = "src/main.rs"

[dependencies]
feedback = { path = "../../lib/feedback", default-features = false }
futures-lite = "2.6.0"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt",
    "tokio-macros",
    "tracing",
    "rt-multi-thread",
    "time",
    "signal",
    "sync",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
safe_drive = { version = "0.4.3", features = ["humble"] }


[dependencies.custom_interfaces]
path = "../../lib/bindings/custom_interfaces"

[dev-dependencies]
futures = { version = "0.3.31", default-features = false, features = [
    "alloc",
    "std",
    "async-await",
] }
