[project]
name = "log_node"
version = "0.1.0"
description = "Handles logging."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["maintainers", "license", "scripts"]
dependencies = ["loguru>=0.7.3", "numpy>=1.26.4"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["colcon-common-extensions>=0.3.0", "ruff>=0.8.4"]
