[project]
name = "navigator_node"
version = "0.1.0"
description = "Handles all Autonomous controls and navigation."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["maintainers", "license", "scripts"]
dependencies = [
    "geopy>=2.4.1",
    "numpy>=1.26.4",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "colcon-common-extensions>=0.3.0",
    "just>=0.8.162",
    "lark>=1.2.2",
    "loguru>=0.7.3",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
