[project]
name = "navigator_node"
version = "0.1.0"
description = "Handles all Autonomous controls and navigation."
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["maintainers", "license", "scripts"]
dependencies = [
    "numpy>=2.2.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["colcon-common-extensions>=0.3.0", "pytest>=8.3.4", "ruff>=0.8.4"]
