<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>see3cam</name>
    <version>0.0.0</version>
    <description>Launch files for the See3CAM_24CUG color camera.</description>
    <maintainer email="contact@barretts.club">Barrett Ray</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>image_proc</depend>
    <depend>v4l2_camera</depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
