[package]
name = "sensors"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sensors_node"
path = "src/main.rs"

[dependencies]
camino = "1.1"
feedback = { path = "../../lib/feedback", default-features = false }
soro_gps = { path = "../../lib/soro_gps", default-features = false }
tokio = { version = "1.42.0", features = [
    "macros",
    "rt",
    "tokio-macros",
    "tracing",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
safe_drive = { version = "0.4.3", features = ["humble"] }
async-hid = { version = "0.4.0", features = [
    "tokio",
], default-features = false }
futures-lite = "2.6.0"
zerocopy = { version = "0.8.25", features = ["derive", "simd"] }
