<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="contact@barretts.club">Barrett Ray</maintainer>
  <maintainer email="tyler73750@gmail.com">Tyler Roman</maintainer>

  <license>TODO</license>

  <depend>gz_ros2_control</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>rqt_controller_manager</depend>
  <depend>rqt_graph</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
