<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soro_simulator_driver</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="contact@barretts.club">Barrett Ray</maintainer>

  <license>TODO</license>

  <!-- required for Webots to interface correctly :D -->
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>webots_ros2_driver</depend>

  <!-- note: these are optional and only for testing -->
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
