[project]
name = "soro_simulator_driver"
version = "0.1.0"
description = "Simulator for the Sooner Rover Team"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["maintainers", "license", "scripts"]
dependencies = ["loguru>=0.7.3", "webots-py"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["colcon-common-extensions>=0.3.0", "ruff>=0.8.4"]

[tool.uv.sources]
webots-py = { path = "../../../../../../bin/webots/lib/controller" }
