[package]
name = "wheels"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wheels_node"
path = "src/main.rs"

[dependencies]
feedback = { version = "0.3.0", git = "https://github.com/onkoe/feedback", default-features = false }
log4rs = "1.3.0"
safe_drive = { version = "0.4.3", features = ["humble"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt",
    "tokio-macros",
    "tracing",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
