[package]
name = "wheels"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wheels_node"
path = "src/main.rs"

[dependencies]
feedback = { path = "../../lib/feedback", default-features = false }
safe_drive = { version = "0.4.3", features = ["humble"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt",
    "tokio-macros",
    "tracing",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
