<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>wheels</name>
    <version>0.0.0</version>
    <description>TODO</description>

    <maintainer email="logan.m.murphy-11@ou.edu">Logan Murphy</maintainer>
    <maintainer email="contact@barretts.club">Barrett Ray</maintainer>
    <maintainer email="bford@axmilius.com">Brendan Ford</maintainer>

    <license>TODO</license>

    <!-- we need to build this shim pkg before any other Rust nodes! -->
    <build_depend>custom_interfaces_shim</build_depend>

    <export>
        <build_type>ament_cargo</build_type>
    </export>
</package>
